[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2018"

[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"

failure = ""

digest = ""
meowhash = ""
generic-array = ""

stork_http = { path = "../stork_http" }

[[example]]
name = "two-deep-http"
path = "two-deep-http.rs"