[package]
name = "stork"
version = "0.0.3"
authors = ["Jordan Doyle <jordan@doyle.la>"]
description = "simple futures-based library to recursively crawl sources in a search engine-like fashion"
repository = "https://github.com/w4/stork"
license = "WTFPL OR 0BSD"
edition = "2018"

[dependencies]
failure = "0.1.6"
failure_derive = "0.1.6"

dyn-clone = "1.0.1"

futures = "0.3.4"
async-stream = "0.2.1"

[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }