[package]
name = "stork_http"
version = "0.0.3"
authors = ["Jordan Doyle <jordan@doyle.la>"]
description = "first-party stork implementation for HTML-based web scraping"
repository = "https://github.com/w4/stork"
license = "WTFPL OR 0BSD"
edition = "2018"

[dependencies]
stork = { path = "../stork", version = "0.0.3" }

select = "0.4.3"
reqwest = { version = "0.10.1", features = ["gzip"] }
url = "2.1.1"

failure = "0.1.6"
failure_derive = "0.1.6"

futures = "0.3.4"
async-stream = "0.2.1"

[dev-dependencies]
stork = { path = "../stork" }
tokio = { version = "0.2", features = ["full"] }