[package]
name = "storkcli"
version = "0.1.0"
authors = ["Jordan Doyle <jordan@doyle.la>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stork = { path = "../stork", version = "0.0.3" }
stork_http = { path = "../stork_http", version = "0.0.3" }

tokio = { version = "0.2", features = ["full"] }
futures = "0.3"

failure = ""